--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# local
+hello.py
+diabetes-training/*
+diabetes_service/*
+diabetes_training-hyperdrive/*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
